--- a/04_data.ipynb
+++ b/04_data.ipynb
@@ -148,19 +148,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'means' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-332eb4238297>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     22\u001b[0m                       \u001b[0mA\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGaussianBlur\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;31m#                       A.Solarize(threshold=0.5),\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m                       \u001b[0mA\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNormalize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmeans\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mstd\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstds\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmax_pixel_value\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m                          ToTensorV2()]                    \n\u001b[1;32m     26\u001b[0m                     )\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'means' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#export\n",
     "import albumentations as A\n",
@@ -168,14 +156,28 @@
     "from torchvision import transforms\n",
     "from albumentations.core.transforms_interface import ImageOnlyTransform\n",
     "import random\n",
-    "class Channelaug(ImageOnlyTransform):\n",
+    "import cv2\n",
+    "class Channelcopy(ImageOnlyTransform):\n",
     "\n",
     "    def __init__(self, always_apply=False, p=0.5):\n",
     "        super(Channelaug, self).__init__(always_apply, p)\n",
     "\n",
     "    def apply(self, img, **params):\n",
+    "        \n",
     "        temp=img[:,:,random.randint(0,9),np.newaxis]\n",
     "        return np.repeat(temp,10,axis=2)\n",
+    "\n",
+    "class Channelaug(ImageOnlyTransform):\n",
+    "    def __init__(self, always_apply=False, p=0.5):\n",
+    "        super(Channelaug, self).__init__(always_apply, p)\n",
+    "\n",
+    "    def apply(self, img, **params):   \n",
+    "        result_img = np.empty_like(img)\n",
+    "        for i in range(10):          \n",
+    "            shift=random.uniform(-0.2,0.2)\n",
+    "            result_img[..., i] = img[..., i] + shift\n",
+    "        result_img[result_img>1]=1\n",
+    "        return result_img\n",
     "\n",
     "\n",
     "trainaug=[]\n",
@@ -207,8 +209,6 @@
     "                      A.Normalize(mean=means,std=stds,max_pixel_value=1.0),\n",
     "                         ToTensorV2()]                    \n",
     "                    )\n",
-    "\n",
-    "\n",
     "trainaug.append(globalaug1)\n",
     "trainaug.append(globalaug2)\n",
     "for _ in range(6):\n",
@@ -243,20 +243,6 @@
     "aug = TrainTransform(trainaug)\n",
     "aug2=ValTransform(val_pipe)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
