--- a/SSLtrain-fromRS.ipynb
+++ b/SSLtrain-fromRS.ipynb
@@ -249,16 +249,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from fastai.vision.all import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'args' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-0a2227c52ef4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtorchvision\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmodels\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtorchvision_models\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtorchvision_models\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__dict__\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0march\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'args' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from torchvision import models as torchvision_models\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student=xresnet18(c_in=10)\n",
+    "student[11]=nn.Identity()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "student = utils.MultiCropWrapper(student, DINOHead(\n",
-    "    embed_dim,\n",
+    "    512,\n",
     "    2**16,\n",
     "    use_bn=False,\n",
     "    norm_last_layer=True,\n",
     "))\n",
-    "teacher = utils.MultiCropWrapper(\n",
-    "    teacher,\n",
-    "    DINOHead(embed_dim, 2**16, use_bn=False),\n",
-    ")"
+    "# teacher = utils.MultiCropWrapper(\n",
+    "#     teacher,\n",
+    "#     DINOHead(embed_dim, 2**16, use_bn=False),\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp=torch.ones(1,10,120,120)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.0150,  0.0144, -0.0184,  ..., -0.0575, -0.0004,  0.0712]],\n",
+       "       grad_fn=<MmBackward>)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student(temp)"
    ]
   },
   {
