--- a/index.ipynb
+++ b/index.ipynb
@@ -387,6 +387,135 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "for ff in tqdm.tqdm(os.listdir('./data/BigEarthNet-v1.0')):\n",
+    "    cmd='mv '+'./data/BigEarthNet-v1.0/'+ff+'/*_B??.tif ./data/Bigrawdata/'\n",
+    "    os.system(cmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastcore.parallel import parallel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def runcmd(ff):\n",
+    "    cmd='mv '+'./data/BigEarthNet-v1.0/'+ff+'/*_B??.tif ./data/Bigrawdata/'\n",
+    "    os.system(cmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(#590326) [None,None,None,None,None,None,None,None,None,None...]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parallel(runcmd,os.listdir('./data/BigEarthNet-v1.0'),progress=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 590326/590326 [00:36<00:00, 16182.58it/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "ll=[]\n",
+    "for ff in tqdm.tqdm(os.listdir('./data/BigEarthNet-v1.0')):\n",
+    "    file='./data/BigEarthNet-v1.0/'+ff+'/'+ff+'.tif'\n",
+    "    if os.path.exists(file):\n",
+    "        ll.append(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.read_csv('./data/file.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newdf=pd.DataFrame({'fname':ll})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newdf['Isval']=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['fname', 'Isval', 'label'], dtype='object')"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newdf['label']=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
